# sm-slingshot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/sm_slingshot/: cli.py
src/sm_slingshot/utils/: __init__.py  logging.py
