[project]
name = "sm-slingshot"
version = "0.1.0"
description = "A Sagemaker model and endpoint deployment CLI tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Piyush Ranjan", email = "ranjanpiyush0@gmail.com" }]
requires-python = ">=3.11"
keywords = ["sagemaker", "aws", "mlops", "deployment"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Software Development :: Build Tools"
]
dependencies = [
	"boto3>=1.42",
	"sagemaker>=3.5",
	"typer>=0.24",
	"pydantic>=2.12",
	"rich>=13.9",
]

[project.scripts]
sm-slingshot = "sm_slingshot.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_slingshot"]

[tool.hatch.version]
path = "src/sm_slingshot/__init__.py" 


[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
    "pytest-cov>=7.0",
    "moto[sagemaker]>=5.1",

    "ruff>=0.15",
    "mypy>=1.19",
    "boto3-stubs[sagemaker]",   # type stubs for boto3
    "pre-commit>=4.5",

    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=1.0",
    "mkdocs-gen-files>=0.6",

    # Release
    "commitizen>=4.13",
]


[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking (move type-only imports to TYPE_CHECKING)
    "PTH",      # use pathlib over os.path
    "RUF",      # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["sm_slingshot"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore "unused import" (F401) in init files

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["sagemaker.*"]
ignore_missing_imports = true   # sagemaker has incomplete stubs


# testing
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sm_slingshot --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = true
